--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,45 @@
 
 {% block content %}
     <h1>시작하기</h1>
+
+    <form action="{{ url_for('index') }}", method="POST">
+        <div>
+            {{ form.username(class_='form-control',
+                placeholder='아이디', autocomplete='off',
+                autofocus=true) }}
+
+            <ul>
+                {% for error in form.username.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            {{ form.password(class_='form-control',
+                placeholder='패스워드') }}
+
+            <ul>
+                {% for error in form.password.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            {{ form.confirm_pswd(class_='form-control',
+                placeholder='패스워드 재입력') }}
+        
+            <ul>
+                {% for error in form.confirm_pswd.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        
+        <div>
+            {{ form.submit_button }}
+        </div>
+
+        {{ form.csrf_token }}
+
+    </form>
 {% endblock %}
