--- a/templates/login-layout.html
+++ b/templates/login-layout.html
@@ -6,6 +6,14 @@
     <title>{% block title %}{% endblock %} - |Flask Chat Room|</title>
 </head>
 <body>
+    <!-- 메시지 띄우기 -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages%}
+            category: {{messages[0][0]}}
+            {{ messages[0][1] }}
+        {% endif %}
+    {% endwith%}
+
     {% block content %}
 
     {% endblock %}
