chat 스크롤 / 대화창 수정

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-8">
             <!-- 메시지 창 -->
-            <div id="rightside-pannel">
+            <div class="container" id="rightside-pannel">
                 
             
                     <!-- 메시지 보여주는 창 -->
